# loomstack

./: .claude-bootstrap-prompt.md  .gitignore  BOOTSTRAP_PROMPT.md  CLAUDE.md  GEMINI_NOTES.md  PLAN.md  README.md
blueprint/: Dockerfile  blueprint.yaml  pyproject.toml
blueprint/src/loomstack/: __init__.py  runner.py
blueprint/src/loomstack/agents/: aider_runner.py  architect.py  base.py  classifier.py  claude_code_runner.py  code_worker.py  reviewer.py
blueprint/src/loomstack/core/: budget.py  ci_status.py  config.py  dispatcher.py  github.py  plan_parser.py  state.py
blueprint/src/loomstack/weaver/: __init__.py  app.py  config.py  discord_bot.py  gx10_client.py  openai_compat_client.py  store.py
blueprint/src/loomstack/weaver/routes/: __init__.py  approvals.py  budget.py  chat.py  dashboard.py  dispatcher.py  git_projects.py  health.py  projects.py  providers.py  tasks.py  workers.py
blueprint/src/loomstack/weaver/static/: style.css
blueprint/src/loomstack/weaver/templates/: base.html  budget.html  budget_fragment.html  chat.html  dashboard.html  dispatcher.html  dispatcher_status_partial.html  health.html  health_fragment.html  project_row_partial.html  projects_manage.html  provider_row_partial.html  providers.html  providers_table_partial.html  run_log.html  task_detail_partial.html  task_table_partial.html  tasks.html  worker_row_partial.html  workers.html
blueprint/tests/agents/: test_aider_runner.py  test_architect.py  test_base.py  test_classifier.py  test_claude_code_runner.py  test_code_worker.py  test_reviewer.py
blueprint/tests/core/: test_budget.py  test_ci_status.py  test_dispatcher.py  test_github.py  test_plan_parser.py  test_state.py
blueprint/tests/fixtures/plans/: invalid_cycle.md  invalid_duplicate_id.md  invalid_missing_dep.md  valid_full.md  valid_minimal.md
blueprint/tests/weaver/: test_approvals.py  test_budget.py  test_chat.py  test_dashboard.py  test_discord_bot.py  test_git_projects.py  test_gx10_client.py  test_health.py  test_openai_compat_client.py  test_projects.py  test_run_log.py  test_tasks.py
bootstrap/: PLAN_SCHEMA.md  ROADMAP.md
